# MLOps_MnistProject

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config_cpu.yaml  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  python-app.yml
.github/workflows/workflows/: tests.yml
MLOps_MnistProject/: __init__.py  predict_model.py  train_model.py
MLOps_MnistProject/app/: cloudbuild.yaml  simple_fastapi_app.dockerfile  simple_fastapi_app.py
MLOps_MnistProject/data/: make_dataset.py
MLOps_MnistProject/models/: model.py
dockerfiles/: predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model_mnist20240104182428.pt  model_mnist20240104182730.pt  model_mnist20240104190415.pt  model_mnist20240104192216.pt  model_mnist20240108124449.pt  model_mnist_latest.pt
reports/predictions/: predictions_model_mnist_latest.pt  predictions_model_mnist_latest_ny.pt
tests/: test_data.py  test_model.py  training.py
